2024-05-26  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tga.c: Set affinity of UndefinedOrientation to
	TopLeftOrientation as recommended from Alex Kent Hajnal.

2024-05-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/Magick.xs, PerlMagick/t/subroutines.pl, www/perl.rst:
	Add AccessDefinition(), AddDefinition(), AddDefinitions(), and
	RemoveDefinitions() methods to supporting adding, updating,
	removing definitions.  SourceForge patch #81 "Adds PerlMagick
	support for AddDefinition(), et al." authored by Alex Kent Hajnal.

2024-05-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh (EXTRA_LIBS): Assure that the
	EXTRA_LIBS shell variable is initialized.

2024-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Fix 'undefined' sanitizer linkage
	error. Disable building libx265 until the problem that its package
	config file has now gone missing is addressed.

2024-05-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{bmp.c,jxl.c,mat.c,tga.c,tiff.c,topol.c,wpg.c}: Remove
	C++ comments from C code and change whitespace to use only spaces.

2024-05-16  Fojtik Jaroslav  <JaFojtik@yandex.com>
	* coders/tiff.c: TIFFTAG_INKNAMES should have a first parameter of
	the type uint16_t.
	profile_lenght has been incorrectly decreased.

2024-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Address Coverity 425853:
	"Resource leaks (RESOURCE_LEAK) Variable "filelist" going out of
	scope leaks the storage it points to.".

2024-05-15  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tiff.c: Fixed problem with overflowing IFD.
	https://sourceforge.net/p/graphicsmagick/bugs/738/
	Fixed another parameter need for TIFFSetField/TIFFTAG_INKNAMES.
        https://sourceforge.net/p/graphicsmagick/bugs/739/

2024-05-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jbig.c (ReadJBIGImage): Coder log when creating colormap.
