@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020240526"
-#define public MagickPackageReleaseDate "snapshot-20240526"
+#define public MagickPackageVersionAddendum ".020240601"
+#define public MagickPackageReleaseDate "snapshot-20240601"
